--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/SeanGenge/Wolfies#readme",
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.2.0",
     "dotenv-webpack": "^8.0.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
